@@ -27,5 +27,7 @@ extern void sdl_screenload(char *fname);
 extern void reset_vdu14lines(void);
 extern void swi_swap16palette(void);
 extern int32 readmodevariable(int32 scrmode, int32 var);
+extern void screencopy(int32 src, int32 dst);
+extern int32 get_maxbanks(void);
 
 #endif
